# backenda

./: Cargo.toml  docker-compose.yaml
docker/: config.json
src/: db.rs  images.rs  main.rs  models.rs  utils.rs
src/auth/: discord.rs  mod.rs
src/notifications/: mod.rs
src/playlists/: entries.rs  mod.rs  playlist.rs
src/rooms/: mod.rs  models.rs
src/rtc/: events.rs  mod.rs
src/scripts/: tables.cql
src/users/: mod.rs  notifications.rs  playlist_info.rs  room_info.rs  user_info.rs
