[package]
name = "backenda"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
poem-openapi = { version = "1.2.10", features = ["redoc"] }
poem = { version = "1.2.10", features = ["anyhow", "opentelemetry-prometheus"] }

num_cpus = "0.2.13"
chrono = { version = "0.4.19", features = ["serde"] }
rand = "0.8.4"
lazy_static = "1.4.0"
reqwest = { version = "0.11.8", features = ["json"] }
tracing = "0.1.29"
scylla = "0.3.1"
serde_json = "1"
thiserror = "1.0.30"
anyhow = "1"
concread = "0.2.20"
tracing-subscriber = { version = "0.2.24", features = ["tracing-log"] }